--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -5,7 +5,7 @@
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    color:#ffffff;
+    color: #ffffff;
     font-size: 36pt;
     text-decoration: none;
 }
@@ -15,11 +15,11 @@
 }
 
 h1, h2, h3, h4 {
-    font-family: 'lobster', cursive;
+    font-family: 'Lobster', cursive;
 }
 
 .date {
-    color:#828282
+    color: #828282;
 }
 
 .save {
